@@ -1,3 +1,9 @@
+2001-10-07  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* actors.cc (public): Figure_warmth() written (but not tested).
+	* gumps/Stats_gump.cc (Stats_gump): Show frame for temperature if
+	Avatar is in frozen region.
+
 2001-10-06  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* actorio.cc,intrinsics.cc,actors.h,flags.h,etc:  Started
